# rscrud

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Readme.md  build.rs  docker-compose.yaml
migrations/2021-09-12-114448_create_posts/: down.sql  up.sql
proto/: api.proto
src/: main.rs
src/datastore/: models.rs  store.rs
src/grpc/: server.rs  tests.rs
